--- a/src/css/reset.css
+++ b/src/css/reset.css
@@ -32,3 +32,37 @@ img {
   max-width: 100%;
   height: auto;
 }
+
+
+
+.button-task {
+  display: inline-block;
+  background-color: #4e75ff;
+  color: #fbfbfb;
+  font-size: 16px;
+  font-weight: 500;
+  letter-spacing: 0.04em;
+  padding: 8px 16px;
+  border-radius: 8px;
+  margin-bottom: 24px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.button-task:hover {
+  background-color: #fbfbfb;
+  border: 1px solid #4e75ff;
+  color: #4e75ff;
+}
+
+.nav-list {
+  display: flex;
+  justify-content: center;
+  gap: 24px;
+  margin-top: 36px;
+}
+
+.subtitle {
+  text-align: center;
+  font-size: 24px;
+  margin-bottom: 22px;
+}
